--- a/js looping problems/workout.html
+++ b/js looping problems/workout.html
@@ -6,6 +6,9 @@
     <title>Working out</title>
 </head>
 <body>
+    <div class="main">
+
+    </div>
     <script src="workout.js"></script>
 </body>
 </html>
